samples/_failures_safe/1761367320_d02ac5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d801216.c: In function ‘main’:
./samples/SAFE/__tmp_5d801216.c:144:9: error: expected expression at end of input
  144 |         if (!
      |         ^~
./samples/SAFE/__tmp_5d801216.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5d801216.c:144:9: error: expected declaration or statement at end of input
